<?php

namespace MatCaps\Beta\Domain\Entity\Generics;

class Course
{

}
